Ingress/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
spec:
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
  type: NodePort
