Ingress/service3.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service3
spec:
  selector:
    app: nginx3
  ports:
  - protocol: TCP
    port: 80
  type: NodePort
